Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -39,6 +39,10 @@ The official reports detail results jointly by sex, sector (urban or rural), and
 
 ## Other noteworthy aspects
 
+### Changes in state codes
+
+Beginning in the 2021 PLFS, the state codes separates the union territory, Ladakh, from its former state, Jammu and Kashmir. On August 5, 2019, a significant constitutional change occurred in India when the government revoked Article 370, which had granted special autonomy to the state of Jammu and Kashmir. This landmark decision led to the bifurcation of the state into two distinct union territories. The former state was divided into Jammu and Kashmir, which retained its own legislative assembly, and Ladakh, which was designated as a union territory without a legislative assembly. This reorganization officially took effect on October 31, 2019.
+
 ### Reading in data
 
 The data from the PLFS is shared in text format and not as a `.dta` or `.csv` The particular details are [covered further in a separate document](Reading_in_PLFS_data.md).
