Section on urban panels

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -37,11 +37,27 @@ The households represent the second stage sampling unit. 8 households, stratifie
 
 The official reports detail results jointly by sex, sector (urban or rural), and state. That is, the unemployment rate of urban women in Madhya Pradesh can be safely reported.
 
+## Urban Panel data
+
+The India Periodic LFS facilitates the assembly of a panel dataset that tracks an individual's information over four consecutive quarters. However, this is possible **only for the urban households.**
+
+Based on the 2011 Census of India, urban areas are characterized as:
+
+a. Any location with a municipality, corporation, cantonment board, or a designated town area committee.
+
+b. Any place meeting three criteria concurrently:
+-  minimum population of 5,000.
+- At least 75% of the male working-age population engaged in non-agricultural activities.
+- A population density of at least 400 per sq. km (or 1,000 per sq. mile).
+
+For more information on the urban panel data, refer to this text.
+
 ## Other noteworthy aspects
 
 ### Changes in state codes
 
-Beginning in the 2021 PLFS, the state codes separates the union territory, Ladakh, from its former state, Jammu and Kashmir. On August 5, 2019, a significant constitutional change occurred in India when the government revoked Article 370, which had granted special autonomy to the state of Jammu and Kashmir. This landmark decision led to the bifurcation of the state into two distinct union territories. The former state was divided into Jammu and Kashmir, which retained its own legislative assembly, and Ladakh, which was designated as a union territory without a legislative assembly. This reorganization officially took effect on October 31, 2019.
+Starting with the 2021 PLFS, state codes were updated to distinguish the union territory of Ladakh from its predecessor, Jammu and Kashmir. This change followed a pivotal constitutional amendment on August 5, 2019, when the Indian government annulled Article 370, an article that had accorded special autonomy to Jammu and Kashmir. This monumental move resulted in the splitting of the state into two separate union territories. Jammu and Kashmir remained with its own legislative assembly, while Ladakh was established as a union territory without such an assembly. This restructuring was formally implemented on October 31, 2019.
+
 
 ### Reading in data
 
