Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -29,7 +29,7 @@ The data can be downloaded freely from the [Download Tables Data section](https:
 
 The PLFS uses a stratified two stage sampling procedure. The exact details are given in the annual reports of each survey (e.g., which year’s census was used to draw the primary sampling units). For precise details please review these. The following is a general introduction to the methodology.
 
-For the PLFS, the primary sampling units (PSUs) are, in rural areas, the census villages, in urban areas the blocks of the [Urban Frame Survey]([http://mospi.nic.in/urban-frame-surveyufs](https://mospi.gov.in/web/mospi/urban-frame-survey-ufs), with urban PSUs further stratified by population size. PSUs are drawn with probability proportional to size.
+For the PLFS, the primary sampling units (PSUs) are, in rural areas, the census villages, in urban areas the blocks of the [Urban Frame Survey](http://mospi.nic.in/urban-frame-surveyufs), with urban PSUs further stratified by population size. PSUs are drawn with probability proportional to size.
 
 The households represent the second stage sampling unit. 8 households, stratified by the number of members of secondary education in the household are selected per random sampling for each PSU.
 
