Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -50,7 +50,7 @@ b. Any place meeting three criteria concurrently:
 - At least 75% of the male working-age population engaged in non-agricultural activities.
 - A population density of at least 400 per sq. km (or 1,000 per sq. mile).
 
-For more information on the urban panel data, refer to this text.
+For more information on the urban panel data, refer to this [text](Urban%20Panel%20Data.md).
 
 ## Other noteworthy aspects
 
@@ -85,7 +85,6 @@ The PLFS data is coded using NIC-2008 codes for industry and NCO-2004 codes for 
 NCO-2004, on the other hand is not directly linked to the international occupation system ISCO. The harmonization team could not find any correspondence tables on the MOSPI website. Hence the method used was to rely on the correspondence develop by Mses. Saloni Khurana and Kanika Mahajan in their [technical appendix](utilities/NCO_concordance.pdf) to their paper [Evolution of wage inequality in India (1983-2017)](utilities/wp2020-167.pdf). The harmonization team is thankful to them for their research and kindness in sharing their work.
 
 The technical appendix consists of two tables. The first is the concordance between NCO 1968 and NCO 2004. The second details the concordance between NCO 2004 and ISCO-88. The PDF we [convert into an Excel file](utilities/occupation_correspondences.xlsx). [This R code](utilities/convert_occup_concordance_to_dta.R) produces two `dta` files. One for mapping from older NCO versions (necessary for EUS, but not PLFS) and the [India_nco_04_to_isco_88.dta](utilities/Additional%20Data/India_nco_04_to_isco_88.dta) file used in the harmonization code to convert from NCO 2004 to ISCO-88.
-Text
 
 ### Changes in states over time
 
