Update 1. Introduction to PLFS.md

--- a/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
+++ b/Support/B - Country Survey Details/IND/PLFS/1. Introduction to PLFS.md
@@ -50,7 +50,7 @@ b. Any place meeting three criteria concurrently:
 - At least 75% of the male working-age population engaged in non-agricultural activities.
 - A population density of at least 400 per sq. km (or 1,000 per sq. mile).
 
-For more information on the urban panel data, refer to this [text](Urban%20Panel%20Data.md).
+For more information on the urban panel data, refer to this [text](Urban%20panel%20data.md).
 
 ## Other noteworthy aspects
 
