Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -92,4 +92,10 @@ in extent and ten or more resident labourers. All areas other than urban and est
 
 ### Duplicates in early years and household heads re-assignment
 
+
+
+
+
+### Labour force participation and employment statistics comparison with LKA national annual reports
+
     
