Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -1,4 +1,4 @@
-# Introduction to Sri Lanka (LKA) national Labor Force Survey (LFS)
+# Introduction to Sri Lanka (LKA) national Labour Force Survey (LFS)
 
 - [What is the LKA LFS](#what-is-the-lka-lfs)
 - [What does the LKA LFS cover?](#what-does-the-lka-lfs-cover)
@@ -9,7 +9,7 @@
 
 ## What is the LKA LFS?
 
-The Sri Lankan Labor Force Survey (LFS) is a household-based sample survey conducted by the Department of Census & Statistics under the National Household Survey Program. Starting in 1990, the LKA LFS has been conducted quarterly every year with the aim to measure the levels and trends of employment, unemployment and labor force in Sri Lanka. 
+The Sri Lankan Labour Force Survey (LFS) is a household-based sample survey conducted by the Department of Census & Statistics under the National Household Survey Program. Starting in 1990, the LKA LFS has been conducted quarterly every year with the aim to measure the levels and trends of employment, unemployment and labour force in Sri Lanka. 
 
 
 ## What does the LKA LFS cover?
@@ -44,10 +44,13 @@ Years and sample size of LFS harmonized for GLD are:
 | 2020 | 21,149        | 77,251      |  16,424,016  |   25,750   | 16,739,396**  |
 | 2021 | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659**  |
 
-**15 years and above
+Note: 
+1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and abover (years marked with **). 
+2) The annual report of 1995 could not be found so the number of household reported officially for this year is unknown.  
 
 ## Where can the data be found?
 
+The data is publicly available for years from 1992 to 2020 on *Lanka Datta* yet with a 
 
 
 ## What is the sampling procedure?
