Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -50,7 +50,7 @@ Note:
 
 ## Where can the data be found?
 
-The data is publicly available for years from 1992 to 2020 on *Lanka Datta* yet with a 
+The data is publicly available through free registration for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data  
 
 
 ## What is the sampling procedure?
