--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -50,7 +50,7 @@ Note:
 
 ## Where can the data be found?
 
-The data is publicly available through free registration for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data  
+The data is publicly available through free registration for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data set. Although Lanka Datta claims that with registration, LFS can be downloaded 100% of the original raw data set, trying to download each year's LFS confirms that only 25% of the original data set can be downloaded.       
 
 
 ## What is the sampling procedure?
