Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -16,7 +16,7 @@ The Sri Lankan Labour Force Survey (LFS) is a household-based sample survey cond
 
 The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as a an indication of migration.   
 
-Years and sample size of LFS harmonized for GLD are:
+GLD harmonization of LKA LFS covers year 1992 to 2021, 23 years in total. Years and sample size of LFS harmonized for GLD are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
@@ -50,14 +50,15 @@ Note:
 
 ## Where can the data be found?
 
-The data is publicly available through free registration for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data set. Although Lanka Datta claims that with registration, LFS can be downloaded 100% of the original raw data set, trying to download each year's LFS confirms that only 25% of the original data set can be downloaded.       
-
+Through free registration, the data is publicly available for years from 1992 to 2020 on [*Lanka Datta*](http://nada.nso.gov.lk/index.php/home) yet with only a limited sample size of 25% of the full data set. Although Lanka Datta claims that with registration, LFS can be downloaded 100% of the original raw data set, trying to download each year's LFS confirms that only 25% of the original data set can be downloaded.       
 
 ## What is the sampling procedure?
 
 The sampling procedure of LKA LFS is a stratified two-stage probability sample design, The primary sampling units (PSU) are census blocks; and the secondary sampling units are the housing units. Although the number of PSU selected per quarter varies through years (i.e. 252 PSUs per quarter in 1992 whereas 2,250 in 2007) depending on the Census of Population and Housing in past years, the survey usually select 10 housing units per PSU per quarter. 
 
 Since LKA LFS is a quarterly survey, it was conducted every three months and would take two months to conduct interview and collect data. So most of the years, except those without complete four quarters, have 8 categories of "month of interview" variable in the raw dataset: two months for each quarter and four quarters in total. Month 1 and 2 would be coded as `wave 1`, for example.
+
+Four years out of the total 23 years do not cover all four quarters. Among the four years, 2011, 2012 and 2013 did not conduct the fourth quarter as the country's office of statistics was occupied with preparation for the population census. 2001 does not have the third quarter and the reason is not stated. 
 
 ## What is the geographic significance level?
 
