Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -65,7 +65,7 @@ Four years out of the total 23 years do not cover all four quarters. Among the f
 The LKA LFS is representative at the urban/rural division of each district level. 
 
 Note that in the raw data the `sector` variable originally has three categories: urban, rural, and estate. An estate sector in Sri Lanka is actually a plantation sector. An estate sector consists of all plantations which are 20 acres or more
-in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector [(_Sinnathurai, V., Březinová, O., 2012_)](utilities/Sinnathurai_V_Březinová_O_2012.pdf). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors.  
+in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector [(_Sinnathurai, V., Březinová, O., 2012_)](utilities/Sinnathurai_V_Březinová_O_2012.pdf). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors. However, coding urban/rural status in this way resulted a much higher proportion of urban population that is as twice as the numbers in ILO and World Bank Development Indicators in in 1992-1995 (i.e., 40% in our harmonized data versus 18% in other sources). This is   
 
 
 ## Other noteworthy aspects  
