--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -14,7 +14,7 @@ The Sri Lankan Labour Force Survey (LFS) is a household-based sample survey cond
 
 ## What does the LKA LFS cover?
 
-The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as a an indication of migration.   
+The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods for years between 1992 and 2004: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as a an indication of migration.   
 
 GLD harmonization of LKA LFS covers year 1992 to 2021, 23 years in total. Years and sample size of LFS harmonized for GLD are:
 
@@ -37,15 +37,15 @@ GLD harmonization of LKA LFS covers year 1992 to 2021, 23 years in total. Years 
 | 2008 | 18,596        | 73,489      |  16,327,367  |   20,260   | 16,319,065   |
 | 2011 | 14,408        | 56,172      |  17,909,455  |   17,620   | 17,909,743   |
 | 2012 | 16,336        | 62,298      |  17,915,383  |   19,420   | 17,915,383   |
-| 2013 | 20,785        | 79,347      |  16,527,722  |   25,000   | 16,359,761**  |
-| 2014 | 21,446        | 81,385      |  15,284,022  |   25,000   | 16,531,768**  |
-| 2015 | 21,895        | 82,800      |  15,438,706  |   25,000   | 15,281,945**  |
-| 2019 | 21,696        | 82,800      |  16,424,016  |   25,750   | 16,424,016**  |
-| 2020 | 21,149        | 77,251      |  16,424,016  |   25,750   | 16,739,396**  |
-| 2021 | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659**  |
+| 2013<sup>*</sup> | 20,785        | 79,347      |  16,527,722  |   25,000   | 16,359,761   |
+| 2014<sup>*</sup> | 21,446        | 81,385      |  15,284,022  |   25,000   | 16,531,768   |
+| 2015<sup>*</sup> | 21,895        | 82,800      |  15,438,706  |   25,000   | 15,281,945   |
+| 2019<sup>*</sup> | 21,696        | 82,800      |  16,424,016  |   25,750   | 16,424,016   |
+| 2020<sup>*</sup> | 21,149        | 77,251      |  16,424,016  |   25,750   | 16,739,396   |
+| 2021<sup>*</sup> | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
 
 Note: 
-1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and abover (years marked with **). 
+1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and abover (years marked with <sup>*</sup> ). 
 2) The annual report of 1995 could not be found so the number of household reported officially for this year is unknown.  
 
 ## Where can the data be found?
@@ -70,17 +70,30 @@ in extent and ten or more resident labourers. All areas other than urban and est
 
 ## Other noteworthy aspects  
 
-### Changes in survey structure throughout the years
+### Changes in survey structure 
 
-1992-2004 Two reference periods
-2006-2008     Only one reference period, the past 7-day reference period; literacy added whereas training information removed 
+From 1992 to 2021, LKA LFS has went through several major changes in terms of questionnaire structure, coding scheme and survey questions. These changes devide all surveys into 5 groups.
 
+**Years with two reference periods**:
+<br>
+<ins>1992-1995</ins> The initial questionnaire template. 
+<br>
+<ins>1996-2004</ins> Added more categories to the highest educational level attained such as each grade in primary and secondary education, which allows us to code `educat7`. In comparison, earlier years do not have `educat7` and `educat5` due to no distinction between "primary" and "primary unfinished". These years also added current schooling status.
+<br>
 
+**Years with one reference period**:
+<br>
+<ins>2006-2012</ins> Only has the past 7-day reference period. Added questions of literacy in terms of Sinhala, Tamil, and English. Training-related questions were expanded to include the name, field and duration of training. 
+<br>
+<ins>2013-2015</ins> Labor force participation age was changed from 10 to 15.The questionnaire was reformted to partition questions for people with different labour status, i.e. question section only for employer or self-employed people. Questions concerning income were also rephrase to cater to different income units, i.e. daily wage earners and monthly salary earners. In addition, years starting with 2013 all use Sri Lanka Standard Classification of Occupation 2008 (SLSCO-08, corresponding to ISCO-08) and Sri Lanka Standard Industrial Classification 4 (SLSIC 4, corresponding to ISIC Rev.4) which will be discussed in the following section.   
+<br>
+<ins>2019-2021</ins> Questionnaire in this stage is very similar to the last stage. Digital literacy was added and employers and account owners were separate as a single category when asking income questions.
 
 ### Coding of industry and occupation codes
 
+In terms of classifications of industry and occupation, we only have definite information on the national and international versions used for years from 2013 to 2021. As mentioned in the previous section, these years use national classifications SLSCO-08 and SLSIC 4 which are based on ISCO-08 and ISIC rev.4 respectively. For years before 2013, 2002 and 2012 annual reports both claim to use ISCO-88 and ISIC rev.4. However, we were unable to validate this claim and even if we had confirmed it we would not have the corresponding table to map. The original industrial and occupation variables in the raw data sets not only have categories beyond ISIC and ISCO, but also miss a whole industrial group such as "Manufacture of wearing apparel". 
 
-
+For 2013-2021
 
 ### Regional exclusion of Northern and Eastern Provinces
 
