Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -92,7 +92,7 @@ From 1992 to 2021, LKA LFS has went through several major changes in terms of qu
 
 In terms of classifications of industry and occupation, we only have definite information on the national and international versions used for years from 2013 to 2021. As mentioned in the previous section, these years use national classifications SLSCO-08 and SLSIC 4 which are based on ISCO-08 and ISIC rev.4 respectively. For years before 2013, 2002 and 2012 annual reports both claim to use ISCO-88 and ISIC rev.4. However, we were unable to validate this claim and even if we had confirmed it we would not have the corresponding table to map. The original industrial and occupation variables in the raw data sets not only have categories beyond ISIC and ISCO, but also miss a whole industrial group such as "Manufacture of wearing apparel". 
 
-For 2013-2021
+For 2013-2021, we harmonized both industry and occupation at 4-digit level. Detailed corresponding tables and mapping process is in this [separate document](Correspondence_National_International_Classifications.md) . 
 
 ### Regional exclusion of Northern and Eastern Provinces
 
