Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -92,12 +92,14 @@ From 1992 to 2021, LKA LFS has went through several major changes in terms of qu
 
 In terms of classifications of industry and occupation, we only have definite information on the national and international versions used for years from 2013 to 2021. As mentioned in the previous section, these years use national classifications SLSCO-08 and SLSIC 4 which are based on ISCO-08 and ISIC rev.4 respectively. For years before 2013, 2002 and 2012 annual reports both claim to use ISCO-88 and ISIC rev.4. However, we were unable to validate this claim and even if we had confirmed it we would not have the corresponding table to map. The original industrial and occupation variables in the raw data sets not only have categories beyond ISIC and ISCO, but also miss a whole industrial group such as "Manufacture of wearing apparel". 
 
-For 2013-2021, we harmonized both industry and occupation at 4-digit level. Detailed corresponding tables and mapping process is in this [separate document](Correspondence_National_International_Classifications.md) . 
+For 2013-2021, we harmonized both industry and occupation at 4-digit level. Detailed corresponding tables and mapping process are in this [separate document](Correspondence_National_International_Classifications.md) . 
 
 ### Regional exclusion of Northern and Eastern Provinces
 
- 
- 
+Sri Lankan civil war from 1989 to 2009 the majority of which occurred in the Norhtern Province obstructed survey conduction from 1992 to 2008 in the Northern and Eastern Provinces. In 1988, the Sri Lankan president at that time issued proclamations to merge the Northern and Eastern Provicnes to be one administrative unit. Therefore, all years before 2011 do exclude the Northern Province. Year 2003 and 2008 were managed to survey the Eastern Province. And all years since 2011 cover the total 25 districts from 7 provinces.
+Below is a screenshot from 2001 annual report explaining the change in the geographical coverage.
+![explanation](utilities/2011_report_northern_and_eastern.png)
+
 
 ### Urban/rural status
 
