Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -102,15 +102,14 @@ Below is a screenshot from 2001 annual report explaining the change in the geogr
 
 ![explanation](utilities/2011_report_northern_and_eastern.png)
 
-
 ### Urban/rural status
 
+The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book),  
 
 
 
 
-
-### Duplicates in early years and household heads re-assignment
+### Duplicates in early years 
 
 
 
