Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -65,7 +65,7 @@ Four years out of the total 23 years do not cover all four quarters. Among the f
 The LKA LFS is representative at the urban/rural division of each district level. 
 
 Note that in the raw data the `sector` variable originally has three categories: urban, rural, and estate. An estate sector in Sri Lanka is actually a plantation sector. An estate sector consists of all plantations which are 20 acres or more
-in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector [(_Sinnathurai, V., Březinová, O., 2012_)](utilities/Sinnathurai_V_Březinová_O_2012.pdf). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors. However, coding urban/rural status in this way resulted a much higher proportion of urban population that is as twice as the numbers in ILO and World Bank Development Indicators in in 1992-1995 (i.e., 40% in our harmonized data versus 18% in other sources). To make the case more convoluted, most of the LKA national annual reports of LFS 1992-2021 report a 44% ~ 50% of rural labour force participation, compared to 14% ~ 18% in our harmonized data as well as in other sources. This mismatch seems to be caused by the ill-defined urban-rural definition. More discussion of urban-rural definition of LKA in the next section "Other noteworthy aspects - Urban/rural status".        
+in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector [(_Sinnathurai, V., Březinová, O., 2012_)](utilities/Sinnathurai_V_Březinová_O_2012.pdf). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors. However, coding urban/rural status in this way resulted a much higher proportion of urban population that is as twice as the numbers in ILO and World Bank Development Indicators (WDI) in in 1992-1995 (i.e., 40% in our harmonized data versus 18% in other sources). To make the case more convoluted, most of the LKA national annual reports of LFS 1992-2021 report a 44% ~ 50% of rural labour force participation, compared to 14% ~ 18% in our harmonized data as well as in other sources. This mismatch seems to be caused by the ill-defined urban-rural definition. More discussion of urban-rural definition of LKA in the next section "Other noteworthy aspects - Urban/rural status".        
 
 
 ## Other noteworthy aspects  
@@ -104,7 +104,7 @@ Below is a screenshot from 2001 annual report explaining the change in the geogr
 
 ### Urban/rural status
 
-The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book),  
+The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book), the latest statistics such as ILO and WDI (as well as some years in our harmonization) which indicate about 18% of urban population fails to reflect the true level of urbanization in the country, due to the static definition. As argued by the author, the urban sector was defined only by administration. Until 1987, Municipal Councils (MCs), Urban Councils (UCs) and Town Councils (TCs) comprised the urban sector. Meanwhile, rural and estate sectors were governed by the Pradesheeya Sabha (PS). But after the enactment of the 13th Amendament in 1987
 
 
 
