Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -120,9 +120,10 @@ Our harmonized data show discontinuity between 1995 and 1996, indicating a chang
 
 ### Duplicates in early years 
 
+In several early years such as 1993-1996, coding household and individual indentification using the original survey ID information such as province, block, household number and personal serial number produces duplications. Below are two examples from year 1994 adn 1996 respectively. Therefore, we ordered people in descending order of their age within each household to assign new individual number which composes their individual indentifier.
 
-
-
+![1994](utilities/duplicates_1994.png)
+![1996](utilities/duplicates_1996.png)
 
 ### Labour force participation and employment statistics comparison with LKA national annual reports
 
