Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -127,4 +127,6 @@ In several early years such as 1993-1996, coding household and individual indent
 
 ### Labour force participation and employment statistics comparison with LKA national annual reports
 
-    
+In addition to GLD routine quality checks, we also cross checked with each year's annual report to tap into the rich and comprehensive statistics provided in most of the years. The complete comparison results are in this [excel workbook](utilities/LKA_employment_stats_comparison.xlsx). Below only shows the labour force participation rate comparison, which indicates the closeness of our harmonized results and the official estimates. 
+
+![LFPR](utilities/LFPR_comparison.png)
