Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -14,9 +14,9 @@ The Sri Lankan Labour Force Survey (LFS) is a household-based sample survey cond
 
 ## What does the LKA LFS cover?
 
-The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods for years between 1992 and 2004: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as a an indication of migration.   
+The LKA LFS mainly covers detailed information on demographic details, including age, sex, marital status, and location, education, and labour market activities. Economic activities such as employment status, work hours and payment were collected in two reference periods for years between 1992 and 2004: 1) "current" or "last-7-day" activities and 2) "usual" status or the "past 12-month" reference period. The LKA LFS does not have a specific migration section, though it has a question about birth place. Yet it cannot be sufficiently deemed as an indication of migration.   
 
-GLD harmonization of LKA LFS covers year 1992 to 2021, 23 years in total. Years and sample size of LFS harmonized for GLD are:
+GLD harmonization of LKA LFS covers 1992 to 2021, 23 years in total. Years and sample size of LFS harmonized for GLD are:
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	| **Officially Reported Population (# Individuals)** |
 | :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	| :-------:	|
@@ -45,7 +45,7 @@ GLD harmonization of LKA LFS covers year 1992 to 2021, 23 years in total. Years 
 | 2021<sup>*</sup> | 21,534        | 77,869      |  17,133,659  |   25,750   | 17,133,659   |
 
 Note: 
-1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and abover (years marked with <sup>*</sup> ). 
+1) Years before 2013 report population aged 10 and above whereas years since 2013 report 15 and above (years marked with <sup>*</sup> ). 
 2) The annual report of 1995 could not be found so the number of household reported officially for this year is unknown.  
 
 ## Where can the data be found?
