Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -56,7 +56,7 @@ Through free registration, the data is publicly available for years from 1992 to
 
 The sampling procedure of LKA LFS is a stratified two-stage probability sample design, The primary sampling units (PSU) are census blocks; and the secondary sampling units are the housing units. Although the number of PSU selected per quarter varies through years (i.e. 252 PSUs per quarter in 1992 whereas 2,250 in 2007) depending on the Census of Population and Housing in past years, the survey usually select 10 housing units per PSU per quarter. 
 
-Since LKA LFS is a quarterly survey, it was conducted every three months and would take two months to conduct interview and collect data. So most of the years, except those without complete four quarters, have 8 categories of "month of interview" variable in the raw dataset: two months for each quarter and four quarters in total. Month 1 and 2 would be coded as `wave 1`, for example.
+Since LKA LFS is a quarterly survey, it was conducted every three months and would take two months to conduct interviews and collect data. So most of the years, except those without complete four quarters, have 8 categories of "month of interview" variable in the raw dataset: two months for each quarter and four quarters in total. Month 1 and 2 would be coded as `wave 1`, for example.
 
 Four years out of the total 23 years do not cover all four quarters. Among the four years, 2011, 2012 and 2013 did not conduct the fourth quarter as the country's office of statistics was occupied with preparation for the population census. 2001 does not have the third quarter and the reason is not stated. 
 
@@ -72,7 +72,7 @@ in extent and ten or more resident labourers. All areas other than urban and est
 
 ### Changes in survey structure 
 
-From 1992 to 2021, LKA LFS has went through several major changes in terms of questionnaire structure, coding scheme and survey questions. These changes devide all surveys into 5 groups.
+From 1992 to 2021, LKA LFS has gone through several major changes in terms of questionnaire structure, coding scheme and survey questions. These changes devide all surveys into 5 groups.
 
 **Years with two reference periods**:
 <br>
@@ -85,8 +85,8 @@ From 1992 to 2021, LKA LFS has went through several major changes in terms of qu
 <br>
 <ins>2006-2012</ins> Only has the past 7-day reference period. Added questions of literacy in terms of Sinhala, Tamil, and English. Training-related questions were expanded to include the name, field and duration of training. 
 <br>
-<ins>2013-2015</ins> Labor force participation age was changed from 10 to 15.The questionnaire was reformted to partition questions for people with different labour status, i.e. question section only for employer or self-employed people. Questions concerning income were also rephrase to cater to different income units, i.e. daily wage earners and monthly salary earners. In addition, years starting with 2013 all use Sri Lanka Standard Classification of Occupation 2008 (SLSCO-08, corresponding to ISCO-08) and Sri Lanka Standard Industrial Classification 4 (SLSIC 4, corresponding to ISIC Rev.4) which will be discussed in the following section.
-<ins>2019-2021</ins> Questionnaire in this stage is very similar to the last stage. Digital literacy was added and employers and account owners were separate as a single category when asking income questions.
+<ins>2013-2015</ins> Labor force participation age was changed from 10 to 15.The questionnaire was reformatted to partition questions for people with different labour status, i.e. question section only for employer or self-employed people. Questions concerning income were also rephrased to cater to different income units, i.e. daily wage earners and monthly salary earners. In addition, years starting with 2013 all use Sri Lanka Standard Classification of Occupation 2008 (SLSCO-08, corresponding to ISCO-08) and Sri Lanka Standard Industrial Classification 4 (SLSIC 4, corresponding to ISIC Rev.4) which will be discussed in the following section.
+<ins>2019-2021</ins> Questionnaire in this stage is very similar to the last stage. Digital literacy was added, and employers and account owners were separated as a single category when asking income questions.
 
 
 ### Coding of industry and occupation codes
@@ -98,8 +98,8 @@ For 2013-2021, we harmonized both industry and occupation at 4-digit level. Deta
 
 ### Regional exclusion of Northern and Eastern Provinces
 
-Sri Lankan civil war from 1989 to 2009 the majority of which occurred in the Norhtern Province obstructed survey conduction from 1992 to 2008 in the Northern and Eastern Provinces. In 1988, the Sri Lankan president at that time issued proclamations to merge the Northern and Eastern Provicnes to be one administrative unit. Therefore, all years before 2011 do exclude the Northern Province. Year 2003 and 2008 were managed to survey the Eastern Province. And all years since 2011 cover the total 25 districts from 7 provinces.
-Below is a screenshot from 2001 annual report explaining the change in the geographical coverage.
+Sri Lankan civil war from 1989 to 2009 the majority of which occurred in the Northern Province obstructed survey conduction from 1992 to 2008 in the Northern and Eastern Provinces. In 1988, the Sri Lankan president at that time issued proclamations to merge the Northern and Eastern Provinces to be one administrative unit. Therefore, all years before 2011 do exclude the Northern Province. Year 2003 and 2008 were managed to survey the Eastern Province. And all years since 2011 cover the total 25 districts from 7 provinces.
+Below is a screenshot from the 2001 annual report explaining the change in the geographical coverage.
 
 
 ![explanation](utilities/2011_report_northern_and_eastern.png)
@@ -109,18 +109,18 @@ Below is a screenshot from 2001 annual report explaining the change in the geogr
 
 The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book), the latest statistics such as ILO and WDI (as well as some years in our harmonization) which indicate about 18% of urban population fails to reflect the true level of urbanization in the country, due to the static definition. 
 
-As argued by the author, the urban sector was defined only by administration. Until 1987, Municipal Councils (MCs), Urban Councils (UCs) and Town Councils (TCs) comprised the urban sector. Meanwhile, rural and estate sectors were governed by the Pradesheeya Sabha (PS). But after the enactment of the 13th Amendament in 1987, administrative units were recalibrated and TCs were abolished and merged in to PS. This change significantely cut urban population and increased rural population simultaneously. The urban population was estimated above 20% but it dropped to 13.1% in 2001 mainly because 89 settlements previously defined as urban were classifed as rural. Based on the author's dynamic definition refined by population, population density, firewood and well water dependence, about 43.8% of total population are in urban area. 
+As argued by the author, the urban sector was defined only by administration. Until 1987, Municipal Councils (MCs), Urban Councils (UCs) and Town Councils (TCs) comprised the urban sector. Meanwhile, rural and estate sectors were governed by the Pradesheeya Sabha (PS). But after the enactment of the 13th Amendament in 1987, administrative units were recalibrated and TCs were abolished and merged in to PS. This change significantly cut urban population and increased rural population simultaneously. The urban population was estimated above 20% but it dropped to 13.1% in 2001 mainly because 89 settlements previously defined as urban were classified as rural. Based on the author's dynamic definition refined by population, population density, firewood and well water dependence, about 43.8% of total population are in urban areas. 
 
 ![figure1](utilities/urban_rural_definition.png)
 
-Our harmonized data show discontinuity between 1995 and 1996, indicating a change in the definition used in the survey. When using the data, kindly be advised to caution the inconsistent urban rural distribution and the deifnition applied.   
+Our harmonized data show discontinuity between 1995 and 1996, indicating a change in the definition used in the survey. When using the data, kindly be advised to caution the inconsistent urban rural distribution and the definition applied.   
 
 ![figure2](utilities/urban_rural_change.png)
 
 
 ### Duplicates in early years 
 
-In several early years such as 1993-1996, coding household and individual indentification using the original survey ID information such as province, block, household number and personal serial number produces duplications. Below are two examples from year 1994 adn 1996 respectively. Therefore, we ordered people in descending order of their age within each household to assign new individual number which composes their individual indentifier.
+In several early years such as 1993-1996, coding household and individual identification using the original survey ID information such as province, block, household number and personal serial number produces duplications. Below are two examples from the year 1994 adn 1996 respectively. Therefore, we ordered people in descending order of their age within each household to assign new individual number which composes their individual identifier.
 
 ![1994](utilities/duplicates_1994.png)
 ![1996](utilities/duplicates_1996.png)
