--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -100,7 +100,8 @@ For 2013-2021, we harmonized both industry and occupation at 4-digit level. Deta
 
 ### Regional exclusion of Northern and Eastern Provinces
 
-Sri Lankan civil war from 1989 to 2009 the majority of which occurred in the Northern Province obstructed survey conduction from 1992 to 2008 in the Northern and Eastern Provinces. In 1988, the Sri Lankan president at that time issued proclamations to merge the Northern and Eastern Provinces to be one administrative unit. Therefore, all years before 2011 do exclude the Northern Province. Year 2003 and 2008 were managed to survey the Eastern Province. And all years since 2011 cover the total 25 districts from 7 provinces.
+Conflict in Sri Lankan from 1989 to 2009, the majority of which occurred in the north of the island, obstructed survey conduction from 1992 to 2008 in the Northern and Eastern Provinces. All years before 2011 do exclude the Northern Province. Years 2003 and 2008 managed to survey the Eastern Province. And all years since 2011 cover the total 25 districts from 7 provinces.
+
 Below is a screenshot from the 2001 annual report explaining the change in the geographical coverage.
 
 
@@ -109,23 +110,29 @@ Below is a screenshot from the 2001 annual report explaining the change in the g
 
 ### Urban/rural definition
 
-The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book), the latest statistics such as ILO and WDI (as well as some years in our harmonization) which indicate about 18% of urban population fails to reflect the true level of urbanization in the country, due to the static definition. 
+The urban-rural definition of Sri Lanka has been much debated. Referring to [this publication](utilities/RE-DEFINING-URBAN-AREAS-INSRI-LANKA_ips_E_Book.pdf), the latest statistics such as ILO and WDI (as well as some years in our harmonization) which indicate about 18% of urban population could fail to reflect the true level of urbanization in the country, due to the static definition. 
 
-As argued by the author, the urban sector was defined only by administration. Until 1987, Municipal Councils (MCs), Urban Councils (UCs) and Town Councils (TCs) comprised the urban sector. Meanwhile, rural and estate sectors were governed by the Pradesheeya Sabha (PS). But after the enactment of the 13th Amendament in 1987, administrative units were recalibrated and TCs were abolished and merged in to PS. This change significantly cut urban population and increased rural population simultaneously. The urban population was estimated above 20% but it dropped to 13.1% in 2001 mainly because 89 settlements previously defined as urban were classified as rural. Based on the author's dynamic definition refined by population, population density, firewood and well water dependence, about 43.8% of total population are in urban areas. 
+As argued by the author, the urban sector was defined only by administration. Until 1987, Municipal Councils (MCs), Urban Councils (UCs) and Town Councils (TCs) comprised the urban sector. Meanwhile, rural and estate sectors were governed by the Pradesheeya Sabha (PS). After the enactment of the 13th Amendament in 1987, administrative units were recalibrated and TCs were abolished and merged in to PS. This change significantly cut urban population and increased rural population simultaneously. The urban population was estimated above 20% but it dropped to 13.1% in 2001 mainly because 89 settlements previously defined as urban were classified as rural. Based on the author's dynamic definition refined by population, population density, firewood and well water dependence, about 43.8% of total population are in urban areas. 
 
 ![figure1](utilities/urban_rural_definition.png)
 
-Our harmonized data show discontinuity between 1995 and 1996, indicating a change in the definition used in the survey. When using the data, kindly be advised to caution the inconsistent urban rural distribution and the definition applied.   
+Our harmonized data show discontinuity between 1995 and 1996, indicating a change in the definition used in the survey. Note further that the estimates obtained for years before 1995 are much higher than expected, even if an older definition were used. When using the data, kindly be advised to caution the inconsistent urban rural distribution and the definition applied.   
 
 ![figure2](utilities/urban_rural_change.png)
 
 
 ### Duplicates in early years 
 
-In several early years such as 1993-1996, coding household and individual identification using the original survey ID information such as province, block, household number and personal serial number produces duplications. Below are two examples from the year 1994 adn 1996 respectively. Therefore, we ordered people in descending order of their age within each household to assign new individual number which composes their individual identifier.
+In several early years such as 1993-1996, coding household and individual identification using the original survey ID information such as province, block, household number and personal serial number produces duplicates. Below are two examples from the year 1994 and 1996 respectively. 
 
-![1994](utilities/duplicates_1994.png)
-![1996](utilities/duplicates_1996.png)
+| **Example 1994**	| **Example 1996**	|
+| :------:	| :-------:		|
+| ![1994](utilities/duplicates_1994.png) | ![1996](utilities/duplicates_1996.png)|
+
+To solve this, [MORE EXPLANATION]
+
+**we ordered people in descending order of their age within each household and assign new individual (in household) ID numbers. These can be used to  which composes their individual identifier.
+
 
 ### Labour force participation and employment statistics comparison with LKA national annual reports
 
